Adding constant to swagger work with
