# public/swagger/swagger.json
@@ -1,14 +1,14 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "Modus Create Challenge API",
+        "title": "NHTSA API",
         "contact": {
             "name": "Marco Araujo",
             "url": "http://www.marcojunior.com"
         },
         "version": "1.0"
     },
-    "host": "localhost",
+    "host": "localhost:8080",
     "basePath": "",
     "schemes": [
         "http"
@@ -61,9 +61,10 @@
                         "description": "List of vehicles",
                         "schema": {
                             "properties": {
-                                "count": {
-                                    "description": "Display a listing of the vehicles by Model Year, Manufacturer and Model.",
-                                    "type": "integer"
+                                "Counts": {
+                                    "description": "Total results",
+                                    "type": "integer",
+                                    "example": 1
                                 },
                                 "Results": {
                                     "description": "Display a listing of the vehicles by Model Year, Manufacturer and Model.",
